--- a/index.html
+++ b/index.html
@@ -1,67 +1,79 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>LAU后台模板</title>
+    <title></title>
     <link rel="stylesheet" href="/static/layui/css/layui.css">
     <link rel="stylesheet" href="/static/lau/lau.css">
     <script>(window.top === window.self) || (window.top.location.href = window.self.location.href);</script>
 </head>
-<body class="layui-layout-body layui-unselect">
-<div class="layui-layout layui-layout-admin">
-    <!--顶部导航开始-->
-    <div class="layui-header">
-        <a class="lau-logo-mini"><i class="layui-icon layui-icon-release"></i></a>
-        <a class="layui-logo">L A U</a>
-        <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item" lay-unselect><a lau-event="sideMenu0">默认菜单</a></li>
-            <li class="layui-nav-item" lay-unselect><a lau-event="sideMenu1">切换菜单</a></li>
-            <li class="layui-nav-item" lay-unselect>
-                <a>站点推荐</a>
-                <dl class="layui-nav-child">
-                    <dd><a href="http://ylui.yuri2.cn/" target="_blank">YLUI(WIN10UI)</a></dd>
-                    <dd><a href="http://www.bycodes.net/" target="_blank">码外社区(你想看的都有)</a></dd>
-                    <dd><a href="http://lovefc.cn/" target="_blank">女装大佬(lovefc)</a></dd>
-                    <dd><a href="http://blog.he110.info/" target="_blank">校园吸血鬼(He110)</a></dd>
-                    <dd><a href="http://yuri2.cn/blog/" target="_blank">尤里2号(赞助商)</a></dd>
-                </dl>
-            </li>
-        </ul>
-        <ul class="layui-nav layui-layout-right">
-            <li class="layui-nav-item" lay-unselect>
-                <a href="javascript:;"><img src="http://t.cn/RCzsdCq" class="layui-nav-img"> 小黑屋</a>
-                <dl class="layui-nav-child">
-                    <dd><a>基本资料</a></dd>
-                    <dd><a>安全设置</a></dd>
-                    <dd><a href="/html/login.html">安全退出</a></dd>
-                </dl>
-            </li>
-            <li class="layui-nav-item" lay-unselect><a lau-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a></li>
-        </ul>
-    </div>
-    <!--顶部导航结束-->
 
-    <!--侧边菜单开始-->
-    <div class="layui-side" data-href="/json/menu.json">
-        <div class="lau-side-fold"><i class="layui-icon layui-icon-shrink-right"></i></div>
-        <div class="layui-side-scroll">
-            <ul class="layui-nav layui-nav-tree">
-                <!--这里可以写菜单结构,也可以放空,使用异步加载-->
+<body class="layui-layout-body layui-unselect">
+    <div class="layui-layout layui-layout-admin">
+        <!--顶部导航开始-->
+        <div class="layui-header">
+
+            <a class="layui-logo">系统</a>
+
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item" style="margin-right: 20px;" lay-unselect>
+                    <a href="javascript:;"><img src="http://t.cn/RCzsdCq" class="layui-nav-img">张三</a>
+                    <dl class="layui-nav-child">
+                        <dd><a>基本资料</a></dd>
+                        <dd><a>安全设置</a></dd>
+                        <dd><a href="/html/login.html">安全退出</a></dd>
+                    </dl>
+                </li>
+               
             </ul>
         </div>
-    </div>
-    <!--侧边菜单结束-->
+        <!--顶部导航结束-->
 
-    <!--内容主体区域开始-->
-    <div class="layui-body" data-type="" data-title="控制台" data-icon="layui-icon-home" data-href="/html/console.html"></div>
-    <!--内容主体区域结束-->
-</div>
+        <!--侧边菜单开始-->
+        <div class="layui-side">
+            <!-- data-href="/json/menu.json" -->
+            <!-- <div class="lau-side-fold"><i class="layui-icon layui-icon-shrink-right"></i></div>  -->
+            <div class="layui-side-scroll">
+                <ul class="layui-nav layui-nav-tree">
+                    <!--这里可以写菜单结构,也可以放空,使用异步加载-->
+                    <li class="lau-nav-item"><a class="lau-nav-header layui-this" lau-href="/html/console.html"><i
+                                class="layui-icon layui-icon-home"></i><cite>首页</cite></a></li>
+                    <li class="lau-nav-item"><a class="lau-nav-header"><i
+                                class="layui-icon layui-icon-right"></i><cite>项目文档</cite></a>
+                        <dl class="lau-nav-child">
+                            <dd><a lau-href="/doc/quickstart.html"><i
+                                        class="layui-icon layui-icon-circle"></i><cite>快速开始</cite></a></dd>
+                            <dd><a lau-href="/doc/menu.html"><i
+                                        class="layui-icon layui-icon-circle"></i><cite>菜单操作</cite></a></dd>
+                            <dd><a lau-href="/doc/tabs.html"><i
+                                        class="layui-icon layui-icon-circle"></i><cite>标签操作</cite></a></dd>
+                            <dd><a lau-href="/doc/other.html"><i
+                                        class="layui-icon layui-icon-circle"></i><cite>其他操作</cite></a></dd>
+                            <dd><a lau-href="/doc/changelog.html"><i
+                                        class="layui-icon layui-icon-circle"></i><cite>更新日志</cite></a></dd>
+                            <dd><a lau-href="http://www.baidu.com"><i
+                                        class="layui-icon layui-icon-circle"></i><cite>授权说明</cite></a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!--侧边菜单结束-->
+
+        <!--内容主体区域开始-->
+        <div class="layui-body" data-type="" data-title="首页" data-icon="layui-icon-home"
+            data-href="/html/console.html"></div>
+        <!--内容主体区域结束-->
+    </div>
 </body>
 <script src="/static/layui/layui.js"></script>
+<script src="/static/layui/jquery2.2.4.js"></script>
 <script>
-    layui.config({base: '/static/'}).extend({lau: 'lau/lau'}).use(['lau'], function () {
+    layui.config({ base: '/static/' }).extend({ lau: 'lau/lau' }).use(['lau'], function () {
         var lau = layui.lau,
             layer = layui.layer,
             $ = layui.$;
@@ -72,7 +84,7 @@
             switch (_this.attr('lau-event')) {
                 case 'about':
                     $.get('/html/about.html', function (html) {
-                        lau.drawer({content: html});
+                        lau.drawer({ content: html });
                     });
                     break;
                 case 'download':
@@ -92,4 +104,5 @@
 
     });
 </script>
+
 </html>
